# 61850-app

./: .gdbinit  .gitignore  .gitmodules  .nvimrc  CMakeLists.txt  FreeRTOS.cmake  MIMXRT1062xxxxA.mex  Makefile  README.md  Toolchain.sample.cmake  device.cmake  device.ld  device.mex  lib_iec61850.cmake  lwIP.cmake  startup.S
board/: MIMXRT1062xxxxA.mex  board.c  board.h  clock_config.c  clock_config.h  dcd.c  peripherals.c  peripherals.h  pin_mux.c  pin_mux.c.bak  pin_mux.h
board/board/: clock_config.c  clock_config.h  peripherals.c  pin_mux.c.bak
include/FreeRTOS/: FreeRTOSConfig.h  FreeRTOSConfig_old.h
include/libiec61850/: hal_debug.h  stack_config.h
include/net/: enet.h  interface.h  rb_tree.h
include/net/emac/: config.h  emac.h  rx.h  tx.h
include/net/lwip/: lwipopts.h
include/net/lwip/arch/: cc.h  my_soc_arch.h  sys_arch.h
include/net/netif/: ethernet.h
include/usb/: virtual_com.h
patch/: libiec61850.patch  lwip.patch
source/: app.c  enet.c  enet5.c  heartbeat.c  main.c  mem_test.c  mem_test_runner.c  mem_tests.h  swo.c  temp.c
source/FreeRTOS/: freertos_heap.c  freertos_hooks.c
source/example1/: server.c
source/example3/: server.c
source/example4_e/: server.c
source/libiec61850/hal/: lib_memory.c  socket.c  thread.c  time.c
source/net/: debug.c  interface.c  rb_tree.c  sys_arch_freertos.c
source/net/emac/: emac.c  input.c  rx.c  tx.c
source/net/netif/: ethernet.c
source/usb/: usb_device_descriptor.c  virtual_com.c
system/: device.ld  device_flash.ld  fault_handlers.c  handlers.c  startup.S  startup.c  startup.s  syscalls.c
system/components/lan8720/: fsl_phy.c  fsl_phy.h
tools/: debug.sh  gdb.sh  program.jlink  program.sh
